Made home page cooler

--- a/recommendWAh/home_page/templates/registration/login.html
+++ b/recommendWAh/home_page/templates/registration/login.html
@@ -30,7 +30,7 @@
 
 <style>
   html {
-    background-color: #56baed;
+    background: linear-gradient(to right, #00AAFF, #00FF6C);
   }
   
   body {
@@ -70,6 +70,7 @@
   }
   
   #formContent {
+    margin-top: 250px;
     -webkit-border-radius: 10px 10px 10px 10px;
     border-radius: 10px 10px 10px 10px;
     background: #fff;
