--- a/recommendWAh/home_page/templates/registration/login.html
+++ b/recommendWAh/home_page/templates/registration/login.html
@@ -70,7 +70,7 @@
   }
   
   #formContent {
-    margin-top: 250px;
+    margin-top: 170px; /* TODO : something is wrong here, fix this with something that uses relative layouting*/
     -webkit-border-radius: 10px 10px 10px 10px;
     border-radius: 10px 10px 10px 10px;
     background: #fff;
