Attached upload to homepage

--- a/recommendWAh/home_page/templates/home.html
+++ b/recommendWAh/home_page/templates/home.html
@@ -17,6 +17,10 @@
   </div>
 
   <p>
+    <a class="stylee" href="{% url 'upload' %}">upload data</a>
+  </p>
+
+  <p>
     <a class="stylee" href="{% url 'logout' %}">logout</a>
   </p>
 
