--- a/recommendWAh/fileUpload/templates/upload.html
+++ b/recommendWAh/fileUpload/templates/upload.html
@@ -9,7 +9,7 @@
   </form>
 
   <p><a href="{% url 'home' %}">Return to home</a></p>
+  <p><a href="{% url 'result' %}">Check Results</a></p>
 </html>
 
   {% endblock %}
-
