--- a/recommendWAh/home_page/templates/home.html
+++ b/recommendWAh/home_page/templates/home.html
@@ -13,7 +13,11 @@
 
 
   <div style="text-align:center">
-    Hi {{ user.username }}! Welocome to recommendWAh!
+    <h1>Hi {{ user.username }}! Welcome to recommendWAh! </h1>
+    <h2>Your one and only stop for best recommendations, Fully based on your intrests</h2>
+    <br>
+    <h2>All your data is end to end encrypted and fully processed on your device</h2>
+    
   </div>
 
   <p>
@@ -26,7 +30,10 @@
 
   {% else %}
   
-    <p>You are not logged in</p>
+    <h1>Welcome to RecommendWAh!!!</h1>
+
+  <br>
+    
     <a class="stylee" href="{% url 'login' %}">login</a>
   
   </br>
@@ -87,7 +94,7 @@
     text-transform: uppercase;
     display:inline-block;
     margin: 40px 8px 10px 8px; 
-    color: #cccccc;
+    color: #3a3a3a;
   }
 
   .bodystyle {
