--- a/recommendWAh/fileUpload/templates/upload.html
+++ b/recommendWAh/fileUpload/templates/upload.html
@@ -32,8 +32,9 @@
   }
   
   .formStyle {
-    margin-top: 170px;
-    margin-left: 500px;
+    margin-top: 200px;
+    margin-left: auto;
+    margin-right: auto;
     -webkit-border-radius: 10px 10px 10px 10px;
     border-radius: 10px 10px 10px 10px;
     background: #fff;
